# shapefile2db

./: .gitignore  LICENSE  README.md  ca_address.db  ca_address.db-journal  pyproject.toml  requirements.txt  test.py  ut_address.db
shapefile2db/: __init__.py  cli.py  core.py  shape_file_exporter.py  state_shape_file_exporter.py
shapefile2db/address_db/: __init__.py  address_constants.py  address_database.py  address_models.py
