[project]
name = "shapefile2db"
version = "0.1.5"
description = "Exports US Census ZCTA (Zip Code Tabulation Area) shapefiles to a SQLite database via CLI or Python API."
authors = [
    { name = "Ryan Lapine", email = "github.stunt845@passinbox.com" }
]
maintainers = [
    { name = "Ryan Lapine", email = "github.stunt845@passinbox.com" }
]
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE.*"]
requires-python = ">=3.8"

keywords = [
    "ZCTA", "shapefile", "SQLite", "geospatial", "data export",
    "spatial database", "census data", "vector data", "geodata"
]

dependencies = [
    "geopandas==1.1.1",
    "pandas==2.3.2",
    "printpop==0.2.2",
    "pyogrio==0.11.0",
    "setuptools==80.9.0",
    "Shapely==2.1.1",
    "SQLAlchemy==2.0.43"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/rlapine/shapefile2db"
Documentation = "https://github.com/rlapine/shapefile2db/blob/624aa335a27f6db7b56f53907ff8aecf3f031ba7/README.md"
Repository = "https://github.com/rlapine/shapefile2db"

[project.scripts]
shapefile2db = "shapefile2db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shapefile2db"]